--- a/index.html
+++ b/index.html
@@ -8,35 +8,48 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<header>
+<!-- <header>
     <h1>
         Ben Pitroff's Portfolio
     </h1>
     <nav>
         <ul>
-            <li><a href="#project1">project1</a></li>
+            <li><a href="#about">About Me</a></li>
             <li><a href="#project2">project2</a></li>
             <li><a href="#project3">project3</a></li>
         </ul>
     </nav>
-</header>
+</header> -->
 
 <body>
+    <header>
+        <h1>
+            Ben Pitroff's Portfolio
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#project2">project2</a></li>
+                <li><a href="#project3">project3</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section>
             <div class="left">
                 the about me title
             </div>
-            <div class="right">
-                the paragraph of about me
+            <div class="right" id="about">
+                <p>This is the paragraph about me. Here it is. It should be longer than a couple words so I'm just going to keep typing and see where it all ends up...</p>
+                <img src="./assets/images/avatar.png">
             </div>
         </section>
 
         <section>
-            <div class="left">
+            <div class="left" >
                 Projects
             </div>
-            <div class="right">
+            <div class="right" id="project2">
                 Gallery of projects, with hover links and all that jazz
             </div>
         </section>
@@ -45,32 +58,12 @@
             <div class="left">
                 Contact
             </div>
-            <div class="right">
-                some sort of contact me stuff? Social media, email, etc.
+            <div class="right" id="project3">
+                some sort of contact me stuff? Social media, email, etc. 
             </div>
         </section>
 
-
-
-        <!-- <section class="work" id="project1">
-            <h2>This is project 1</h2>
-            <img src="./assets/images/project1.png" alt="code image">
-        </section>
-
-        <section class="work" id="project2">
-            <h2>This is project 2</h2>
-            <img src="./assets/images/project2.png" alt="refactoring homework image">
-        </section>
-
-        <section class="work" id="project3">
-            <h2>This is project 3</h2>
-            <img src="./assets/images/project3.png" alt="motorcycles">
-        </section> -->
-
     </main>
-    <aside>
-
-    </aside>
 </body>
 
 <footer>
