--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<!-- <header>
-    <h1>
-        Ben Pitroff's Portfolio
-    </h1>
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#project2">project2</a></li>
-            <li><a href="#project3">project3</a></li>
-        </ul>
-    </nav>
-</header> -->
-
 <body>
     <header>
         <h1>
@@ -29,15 +16,17 @@
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#project2">project2</a></li>
-                <li><a href="#project3">project3</a></li>
+                <li><a href="#work">My Work</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
+        <!-- About me section -->
         <section>
             <div class="left">
-                the about me title
+                <h2>the about me title</h2>
             </div>
             <div class="right" id="about">
                 <p>This is the paragraph about me. Here it is. It should be longer than a couple words so I'm just going to keep typing and see where it all ends up...</p>
@@ -45,38 +34,49 @@
             </div>
         </section>
 
+        <!-- Portfolio work -->
         <section>
-            <div class="left" >
-                Projects
+            <div class="left">
+                <h2>Projects</h2>
             </div>
-            <div class="right" id="project2">
-                Gallery of projects, with hover links and all that jazz
+            <div class="right" id="work">
+                <p>Gallery of projects, with hover links and all that jazz</p>
+                <div class="first-project">
+                    <img src="./assets/images/project1.png" alt="project 1 image">
+                </div>
+                <div class="project">
+                    <img src="./assets/images/project2.png" alt="project 2 image">
+                </div>
+                <div class="project">
+                    <img src="./assets/images/project3.png" alt="project 3 image">
+                </div>
             </div>
         </section>
 
+        <!-- Contact section -->
         <section>
             <div class="left">
-                Contact
+                <h2>Contact</h2>
             </div>
-            <div class="right" id="project3">
-                some sort of contact me stuff? Social media, email, etc. 
+            <div class="right" id="contact">
+                <p>some sort of contact me stuff? Social media, email, etc.</p>
             </div>
         </section>
 
     </main>
-</body>
 
-<footer>
-    <h2>Footer information</h2>
-    <ul>
-        <li>
-            Contact
-        </li>
-        <li>
-            Social Media
-        </li>
-        <li>
-            Surprise
-        </li>
-    </ul>
-</footer>
+    <footer>
+        <h2>Footer information</h2>
+        <ul>
+            <li>
+                Contact
+            </li>
+            <li>
+                Social Media
+            </li>
+            <li>
+                Surprise
+            </li>
+        </ul>
+    </footer>
+</body>
