--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <h2>CONTACT</h2>
                 <div id="contact">
                     
-                    <a href="https://www.linkedin.com/in/benpitroff"><img src="./assets/images/linkedin-icon.png" alt="LinkedIn Icon"></img></a>
-                    <a href="https://www.instagram.com/benpitroff/"><img src="./assets/images/instagram-icon.png" alt="Instagram Icon"></img></a>
-                    <a href="tel:555-555-5555"><img src="./assets/images/phone-icon.png" alt="Phone Icon"></img></a>
+                    <a href="https://www.linkedin.com/in/benpitroff" target="_blank"><img src="./assets/images/linkedin-icon.png" alt="LinkedIn Icon"></img></a>
+                    <a href="https://www.instagram.com/benpitroff/" target="_blank"><img src="./assets/images/instagram-icon.png" alt="Instagram Icon"></img></a>
+                    <a href="tel:555-555-5555" target="_blank"><img src="./assets/images/phone-icon.png" alt="Phone Icon"></img></a>
                     
                 </div>
         </section>
