added comments to css and html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 
 <body>
+
+    <!-- Header, which contains avatar -->
     <header>
         <h1>
             Ben Pitroff
         </h1>
         <img class="avatar" src="./assets/images/avatar.png">
     </header>
+
+    <!-- Navigation links -->
     <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
@@ -23,7 +27,9 @@
         </ul>
     </nav>
    
+    <!-- Main is everything between Header and Footer -->
     <main>
+
         <!-- About me section -->
         <section>
            <h2>ABOUT</h2>
@@ -32,10 +38,11 @@
             </div>
         </section>
 
-        <!-- Portfolio work -->
+        <!-- Portfolio work -  -->
         <section>
             <h2>WORK</h2>
             <div id="work">
+                <!-- Feature Project gets additional style -->
                 <div class="project-container feature">
                     <a href="https://chicken1991.github.io/css-refactoring-homework/">
                         <img src="./assets/images/project1.png" alt="project 1 image">
