slight cleaning up with classes and comments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="project-container">
-                    <a href="https://www.google.com">
+                    <a href="https://youtu.be/dQw4w9WgXcQ">
                         <img src="./assets/images/project2.png" alt="project 2 image">
                         <div class="photo-label">
                             <h3>Project 2</h3>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="project-container">
-                    <a href="https://www.google.com">
+                    <a href="https://youtu.be/dQw4w9WgXcQ">
                         <img src="./assets/images/project3.png" alt="project 3 image">
                         <div class="photo-label">
                             <h3>Project 3</h3>
@@ -74,7 +74,7 @@
                 </div>
         
                 <div class="project-container">
-                    <a href="https://www.google.com">
+                    <a href="https://youtu.be/dQw4w9WgXcQ">
                         <img src="./assets/images/project4.png" alt="project 4 image">
                         <div class="photo-label">
                             <h3>Project 4</h3>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="project-container">
-                    <a href="https://www.google.com">
+                    <a href="https://youtu.be/dQw4w9WgXcQ">
                         <img src="./assets/images/project5.png" alt="project 5 image">
                         <div class="photo-label">
                             <h3>Project 5</h3>
