removed redundant name and dumb button

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Welcome To My Portfolio!</div>
-                <div class="masthead-heading text-uppercase">-Ben Pitroff-</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Show Me More</a>
+                <!-- <div class="masthead-heading text-uppercase">-Ben Pitroff-</div> -->
+                <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Show Me More</a> -->
             </div>
         </header>
     
