--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To My Portfolio!</div>
+                <div class="masthead-subheading">Welcome!</div>
                 <!-- <div class="masthead-heading text-uppercase">-Ben Pitroff-</div> -->
                 <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Show Me More</a> -->
             </div>
