--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <title>Ben's Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
@@ -30,6 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./assets/benpitroff_resume.pdf">Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -211,7 +210,8 @@
                             <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Ben Pitroff Twitter Profile"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/benpitroff" aria-label="Ben Pitroff Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/benpitroff/" aria-label="Ben Pitroff LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/chicken1991" aria-label="Ben Pitroff Github Profile"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/chicken1991" aria-label="Ben Pitroff Github Profile"><i class="fa-brands fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:secretchicken1991@gmail.com" aria-label="Ben Pitroff Email"><i class="fa-solid fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -422,6 +422,8 @@
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+         <!-- Font Awesome icons (free version)-->
+         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
