--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Just Kidding 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Ben Pitroff 2022</div>
                 </div>
             </div>
         </footer>
