--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/benpitroff" aria-label="Ben Pitroff Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/benpitroff/" aria-label="Ben Pitroff LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://github.com/chicken1991" aria-label="Ben Pitroff Github Profile"><i class="fa-brands fa-github"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="mailto:secretchicken1991@gmail.com" aria-label="Ben Pitroff Email"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:dev@chicken1991.anonaddy.com" aria-label="Ben Pitroff Email"><i class="fa-solid fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
