--- a/index.html
+++ b/index.html
@@ -50,6 +50,50 @@
                     <h3 class="section-subheading text-muted">Here is the work I have done so far.</h3>
                 </div>
                 <div class="row">
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                        <!-- Portfolio item 4-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="./assets/img/portfolio/tech-blog.png" alt="tech-blog-thumbnail" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Tech Blog</div>
+                                <div class="portfolio-caption-subheading text-muted">Database and user profile capabilities</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                        <!-- Portfolio item 5-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="./assets/img/portfolio/stackmypaddle.png" alt="stackmypaddle-thumbnail" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Stackmypaddle.com</div>
+                                <div class="portfolio-caption-subheading text-muted">Pickleball events and court locator for the Seattle area</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="./assets/img/portfolio/employee-tracker.png" alt="employee-tracker-thumbnail" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Employee Tracker</div>
+                                <div class="portfolio-caption-subheading text-muted">Database manipulation through Inquirer</div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
@@ -95,50 +139,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="./assets/img/portfolio/password-generator.png" alt="password-generator-thumbnail" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Password Generator</div>
-                                <div class="portfolio-caption-subheading text-muted">Changing output based on user input</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="./assets/img/portfolio/code-quiz.png" alt="code-quiz-thumbnail" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Code Quiz</div>
-                                <div class="portfolio-caption-subheading text-muted">Built to utilize timers and storage</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="./assets/img/portfolio/code-refactoring.png" alt="code-refactoring-thumbnail" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Code Refactoring</div>
-                                <div class="portfolio-caption-subheading text-muted">Refactoring code!</div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -170,7 +170,7 @@
                             <div class="timeline-body"><p class="text-muted">I was miraculously hired into a Data Center Technician position - my experience? Building gaming PCs.</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
+                    <li class="timeline-image">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -251,7 +251,7 @@
                                     <p>This project was completed to practice external API calls using two OpenWeatherMap APIs: One Call for weather information, and Geocoding for determining city location.</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -290,7 +290,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -325,7 +325,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -344,17 +344,19 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Password Generator</h2>
+                                    <h2 class="text-uppercase">Tech Blog</h2>
                                     <p class="item-intro text-muted">
-                                        <a target="_blank" href="https://chicken1991.github.io/password-generator">Click here for the live demo</a>
+                                        <a target="_blank" href="https://chicken-1991-tech-blog.herokuapp.com/">Click here for the live demo</a>
                                         <span> : </span>
-                                        <a target="_blank" href="https://github.com/chicken1991/password-generator">Click here for the repo</a>
+                                        <a target="_blank" href="https://chicken1991.github.io/tech-blog">Click here for the repo</a>
                                     </p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/password-generator.png" alt="password-generator-img" />
-                                    <p>This project produces a password, the contents of which are determined through user input from prompt()'s in the browser.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/tech-blog.png" alt="tech-blog-img" />
+                                    <p>This simple blog style website allows a user to log in, make posts, and comment on other posts. Database,
+                                        Sequelize, and Handlebars are the heavy lifters here.
+                                    </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -373,17 +375,32 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Code Quiz</h2>
+                                    <h2 class="text-uppercase">stackmypaddle.com</h2>
                                     <p class="item-intro text-muted">
-                                        <a target="_blank" href="https://chicken1991.github.io/code-quiz">Click here for the live demo</a>
+                                        <a target="_blank" href="https://stackmypaddle.com">Click here for the live demo</a>
                                         <span> : </span>
-                                        <a target="_blank" href="https://github.com/chicken1991/code-quiz">Click here for the repo</a>
+                                        <a target="_blank" href="https://github.com/furhan-dev/pickleball.git">Click here for the repo</a>
                                     </p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/code-quiz.png" alt="code-quiz-img" />
-                                    <p>This laughably styled quiz demonstrates how to utilize objects and interval functions.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/stackmypaddle.png" alt="stackmypaddle-img" />
+                                    <p>This group project was created to demonstrate our ability to use api routes, a database, and user logins to 
+                                        create a useful website to allow a user to locate their nearest pickleball court!
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Credits:</strong>
+                                            <li>
+                                            <a href="https://github.com/JimMason564">Jim Mason, </a>
+                                            <a href="https://github.com/furhan-dev">Furhan Samani, </a>
+                                            <a href="https://github.com/rreeves1996">Ryan Reeves, </a>
+                                            <a href="https://github.com/chicken1991">Ben Pitroff</a>
+                                            <li>
+
+
+                                        </li>
+                                    </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
@@ -402,16 +419,16 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Code Refactoring</h2>
+                                    <h2 class="text-uppercase">Employee Tracker</h2>
                                     <p class="item-intro text-muted">
-                                        <a target="_blank" href="https://chicken1991.github.io/css-refactoring-homework/">Click here for the live demo</a>
-                                        <span> : </span>
-                                        <a target="_blank" href="https://github.com/chicken1991/css-refactoring-homework">Click here for the repo</a>
-                                    </p>                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/code-refactoring.png" alt="code-refactoring-img" />
-                                    <p>This was my first homework assignment! I demonstrated my abilites to refactor poorly written (yet still functional) code, so that it would conform to accessability and symantic standards.</p>
+                                        <!-- <a target="_blank" href="https://chicken1991.github.io/css-refactoring-homework/">Click here for the live demo</a> -->
+                                        <!-- <span>  </span> -->
+                                        <a target="_blank" href="https://github.com/chicken1991/employee-tracker.git">Click here for the repo</a>
+                                    </p>                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/employee-tracker.png" alt="employee-tracker-img" />
+                                    <p>This was my first forray into database manipulation, utilizing the inquirer CLI to prompt the user to display, add, and edit different aspects of a company database.</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
