--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                     <a target="_blank" href="https://chicken-1991-tech-blog.herokuapp.com/">Click here
                                         for the live demo</a>
                                     <span> : </span>
-                                    <a target="_blank" href="https://chicken1991.github.io/tech-blog">Click here for the
+                                    <a target="_blank" href="https://github.com/chicken1991/tech-blog.git">Click here for the
                                         repo</a>
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/tech-blog.png"
