--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Marvelous Day</h2>
                                 <p class="item-intro text-muted">
-                                    <a target="_blank" href="https://moetive.github.io/Project-1/">Click here for the
+                                    <a target="_blank" href="https://chicken1991.github.io/Marvelous-Day-Project/">Click here for the
                                         live demo</a>
                                     <span> : </span>
                                     <a target="_blank" href="https://github.com/Moetive/Project-1">Click here for the
